--- a/src/package.json
+++ b/src/package.json
@@ -7,13 +7,35 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:unit": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@nuxt/devtools": "latest",
+    "@nuxt/eslint-config": "^1.4.1",
+    "@nuxt/test-utils": "^3.8.0",
+    "@types/node": "^22.15.29",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vue/test-utils": "^2.4.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.8.0",
+    "typescript": "^5.8.3",
+    "vitest": "^0.34.6",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^2.2.10"
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
