--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,4 +1,14 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "types": ["@types/node"]
+  },
+  "exclude": [
+    "test/**/*",
+    "tests/**/*",
+    "vitest.config.ts",
+    "playwright.config.ts",
+    "composables/__tests__/**/*"
+  ]
 }
